# NeonRust-Optimizer

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
src/: cleaner.rs  localization.rs  main.rs  processes.rs  ram_cleaner.rs  rust_tweaks.rs
