[package]
name = "rust_optimizer"
version = "0.1.0"
edition = "2021"
authors = ["NeonRust"]
description = "A powerful, lightweight Windows and Rust optimizer."

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
sysinfo = "0.30"
winreg = "0.52"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Media",
]
